<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weiqi</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_friends">Friends</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_current_games">Current Games</string>
    <string name="title_activity_game_history">Game History</string>
    <string name="title_activity_make_new_game">Make New Game</string>
    <string name="title_activity_game_board">GameBoard</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_game_board_small">GameBoardSmall</string>
    <string name="press">Press Me</string>
    <string name="go13x13">Go 13x13</string>
    <string name="magic">Magic</string>

</resources>